# meta_ally

./: .gitignore  Installation.md  ReadMe.md  ai_knowledge_api_models.py  ally_config_api_models.py  ally_config_improved_tool_descriptions.md  create_better_too_descriptions.ipynb  er.name  main.py  openapi_to_tool_groups.ipynb  pyproject.toml  ruff.toml  test_tool_inspect.py
Data/: Meta-Ally User Tests - Sheet1.csv
Data/UserRecords/: Florian_W_20260211_110301.html  Florian_W_20260211_110301.json  Florian_W_2_20260211_112632.html  Florian_W_2_20260211_112632.json  Hendrik_Freitag_20260210_140656.html  Hendrik_Freitag_20260210_140656.json  Hendrik_Freitag_20260210_151920.html  Hendrik_Freitag_20260210_151920.json  Luis_20260213_131828.html  Luis_20260213_131828.json  Luis_20260213_141133.html  Luis_20260213_141133.json  Marco_Bender_20260216_100617.html  Marco_Bender_20260216_100617.json  Marco_Bender_20260216_102157.html  Marco_Bender_20260216_102157.json  Maximilian_Roettgen_20260205_114244.html  Maximilian_Roettgen_20260205_114244.json  Maximilian_Roettgen_20260205_120550.html  Maximilian_Roettgen_20260205_120550.json  Meta_Ally_-_Maximilian_Bisani_20260127_150529.html  Meta_Ally_-_Maximilian_Bisani_20260127_150529.json  Meta_Ally_-_Maximilian_Bisani_20260129_150101.html  (+22 more)
Data/add_one/: metadata.json
docs/: Agent_Evaluation_Guide.md  Installation.md
examples/: __init__.py  ai_knowledge_api_models.py  ally_config_api_models.py  analytics_api_mock_service_example.py  analyze_reports_dataframe_example.py  analyze_reports_example.py  api_hooks_example.py  case_factory_addone_example.py  case_factory_copilot_eval_example.py  case_factory_example.py  case_factory_inform_analytics_example.py  case_factory_testing_and_access_example.py  case_factory_website_analytics_example.py  case_variants_visualization_example.py  create_agent_example.py  create_agi_ui_agent_example.py  dataset_manager_addone_example.py  dataset_manager_example.py  dataset_manager_testing_and_access_example.py  dataset_manager_website_analytics_example.py  evaluation_example.py  evaluation_suite_example.py  human_approval_example.py  terminal_chat_example.py  tool_usage_example.ipynb
lib/: ally_config_api_models.py  auth_manager.py  openapi_to_tool_groups.ipynb  openapi_to_tools.py
tests/: __init__.py  test_api_hooks.py  test_authorization.py  test_conversation_turns.py  test_evaluators.py  test_name_normalization.py  test_openapi_tools.py  test_tool_schemas.py
util/: ai_knowledge_to_tool_groups.ipynb  ally_config_improved_tool_descriptions.md  analyze_evaluation_results.ipynb  analyze_user_records.ipynb  analyze_user_records.py
(+177 files in other folders)
